--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class=" col-12 p-5 item">
                           <div class="project-info">
                             <a href="https://coffee-shop-five-navy.vercel.app/" target="_blank">
-                              <img src="images/project/project-image01.png" class="img-fluid text-center  shadow-lg  rounded border" alt="project image">
+                              <img src="images/project/project-image01.PNG" class="img-fluid text-center  shadow-lg  rounded border" alt="project image">
                             </a>
                            
                           </div>
