--- a/index.html
+++ b/index.html
@@ -288,7 +288,11 @@
                   <li><a href="https://www.linkedin.com/in/prarthnavaghani/" class="uil me-3 " data-toggle="tooltip" data-placement="right" title="Linkedin"><i class="fa-brands fa-linkedin-in"></i></a></li>
                   <li><a href="https://www.instagram.com/prarthana_vaghani/" class="uil me-3 " data-toggle="tooltip" data-placement="right" title="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
                   <li><a href="https://www.facebook.com/profile.php?id=61561137482326" class="uil me-3 " data-toggle="tooltip" data-placement="right" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a></li>
-                  <li><a href="p.d.vaghani11729@gmail.com" class="uil me-3 " data-toggle="tooltip" data-placement="right" title="Email"><i class="fa-regular fa-envelope"></i></a></li>
+                  <li>
+                    <a href="mailto:p.d.vaghani11729@gmail.com" class="uil me-3" data-toggle="tooltip" data-placement="right" title="Email">
+                      <i class="fa-regular fa-envelope"></i>
+                    </a>
+                  </li>
              </ul>
               </div>
           </div>
